ui: fix footer display on IE

--- a/packages/ui-default/misc/slideout.styl
+++ b/packages/ui-default/misc/slideout.styl
@@ -4,10 +4,6 @@ html
 body
   width: 100%
 
-#panel
-  display: flex
-  flex-direction: column
-
 body, #panel
   min-height: 100%
   min-height: 100vh
